--- a/sourceCode/MoldTracking.API/MoldTracking.UIASM/MoldTracking.UIASM.csproj
+++ b/sourceCode/MoldTracking.API/MoldTracking.UIASM/MoldTracking.UIASM.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.17" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.1.9" />
+    <PackageReference Include="MudBlazor.ThemeManager" Version="1.0.7" />
     <PackageReference Include="RestEase.HttpClientFactory" Version="1.6.1" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
